--- a/src/components/CharacterSelection/CharacterSelection.styl
+++ b/src/components/CharacterSelection/CharacterSelection.styl
@@ -49,16 +49,16 @@ body
       width 110%
       left 0
       transform skew(-3deg, 2deg)
-      animation giggle .8s infinite
+      animation giggle .8s infinite alternate
       position absolute
 
 @-webkit-keyframes giggle 
   0% 
-    transform skew(0,-1deg)
+    transform skew(0deg,-1deg)
   25% 
     transform skew(-2deg)
   50% 
-    transform skew(-3deg)
+    transform skew(-13deg)
   75%  
     transform skew(1deg)
   
